@@ -1,8 +1,9 @@
 <html metal:use-macro="here/main_template/macros/master">
+
 <body>
 
 <metal:header fill-slot="header">
-  <tal:security condition="python:not checkPerm('Change permissions', here)">
+  <tal:security condition="python:not mtool.canMemberChangeLocalRoles(here)">
     <tal:redirect define="response request/RESPONSE;
                           dummy python:response.redirect(context_url)" />
   </tal:security>
