@@ -22,3 +22,6 @@ Bug fixes:
 CPS internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - CPSTestCase set the new TreeCacheManager to sync for the tests
+- tests the new mtool.canMemberChangeLocalRoles() API
+- change the checkPerms within the local roles management skins and
+use the new mtool API canMemberChangeLocalRoles()
